--- a/estilos/style.css
+++ b/estilos/style.css
@@ -31,3 +31,11 @@ section#telefone {
     transform: translate(-50%, -50%);
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
+
+iframe#tela {
+    position: relative;
+    top: 79px;
+    left: 22px;
+    width: 269px;
+    height: 475px;
+}
